0.3.2: token diet, spec value-over-replacement, and the cross-check report (#10)
Token diet (192.7k -> 180.7k tokens), spec value-over-replacement + Vardorvis defence fix, and the cross-check footnote + copy-report. See PR #10.